(fix): gap adjusted

--- a/src/component/projectCards/projectCards.scss
+++ b/src/component/projectCards/projectCards.scss
@@ -93,7 +93,7 @@
           display: flex;
           flex-direction: column;
           padding: 0 10px 0 10px;
-          gap: 20px;
+          gap: 7px;
 
           .projectDesc {
             text-align: start;
